SERVER-35707 Add helper for clearing participants, improve error messages, and update comments